Revert "Merge pull request #60 from githubcsuser/Implement-Porperty-Deals-Feature"
This reverts commit 98768ff39c8a871248b1037ef751a483543aa47c, reversing
changes made to 197fa9202a8fad370da35e9ca827229ffe98b8c1.